--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "fs": "0.0.1-security",
-    "request": "^2.88.2"
+    "iconv-lite": "^0.6.2",
+    "request": "^2.88.2",
+    "xmldom": "^0.4.0",
+    "xpath": "0.0.32"
   }
 }
