--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "child_process": "^1.0.2",
     "fs": "0.0.1-security",
     "iconv-lite": "^0.6.2",
+    "needle": "^2.6.0",
     "request": "^2.88.2",
     "xmldom": "^0.4.0",
     "xpath": "0.0.32"
