--- a/mysql-node-server/package.json
+++ b/mysql-node-server/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon"
   },
   "keywords": [],
-  "author": "",
+  "author": "dmitrii",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
