--- a/parsers/package.json
+++ b/parsers/package.json
@@ -2,7 +2,7 @@
   "name": "catalog_books",
   "version": "1.0.0",
   "description": "asd",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
