--- a/restApi/package.json
+++ b/restApi/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
