--- a/restApi/package.json
+++ b/restApi/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "js-sha256": "^0.9.0",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
