--- a/restApi/package.json
+++ b/restApi/package.json
@@ -15,7 +15,10 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "js-sha256": "^0.9.0",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "needle": "^2.6.0",
+    "xmldom": "^0.4.0",
+    "xpath": "0.0.32"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
