--- a/restApi/package.json
+++ b/restApi/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
