--- a/restApi/package.json
+++ b/restApi/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
+    "child_process": "^1.0.2",
     "config": "^3.3.3",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
